--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ body {
 	text-decoration: none;
 }
 
+.link:visited {
+	text-decoration: none;
+}
+
 .btn {
 	font-family: inherit;
 	font-weight: 700;
@@ -40,6 +44,7 @@ body {
 	background: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
+	cursor: pointer;
 }
 
 .title {
@@ -89,12 +94,12 @@ body {
 /* ------------SITE NAV------------ */
 
 .site-nav-item,
-.contacts-nav-item {
+.contacts-nav-item, {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
-	color: var(--secondary-text-color);
+	
 }
 
 .site-nav-item:hover,
@@ -194,8 +199,18 @@ body {
 	color: #ffffff;
 }
 
+.contacts-address:hover,
+.contacts-address:focus {
+	color: var(--accent-color);
+}
+
 .footer-contacts {
 	color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-contacts:hover,
+.footer-contacts:focus {
+	color: var(--accent-color);
 }
 
 /* ----------------------------------Styles for portfolio.html---------------------------------- */
@@ -211,9 +226,9 @@ body {
 	color: #212121;
 	background-color: #f5f4fa;
 	border-radius: 4px;
-	cursor: pointer;
 }
 
+.filter-btn:hover,
 .filter-btn:focus {
 	color: #ffffff;
 	background-color: var(--accent-color);
