--- a/css/styles.css
+++ b/css/styles.css
@@ -94,12 +94,12 @@ body {
 /* ------------SITE NAV------------ */
 
 .site-nav-item,
-.contacts-nav-item, {
+.contacts-nav-item {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
-	
+	color: var(--secondary-text-color);
 }
 
 .site-nav-item:hover,
